--- a/templates/productos.html
+++ b/templates/productos.html
@@ -47,85 +47,131 @@
 
     <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
         <div class="container-fluid">
-            <div class="nombre_head"><p>Crossover.sf</p></div>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <div class="nombre_head">
+                <p>Crossover.sf</p>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">MENÚ</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                 </div>
-
+    
                 <div class="offcanvas-body">
                     <div class="links_small_navbar">
-                        <ul>
-                            <li><a href="../index.html">Inicio</a></li>
-                            <li><a href="productos.html">Productos</a></li>
-                            <li><a href="rebajas.html">Rebajas</a></li>
-                            <li><a href="verano.html">Verano</a></li>
-                            <li><a href="novedades.html">Novedades</a></li>
-                            <li><a href="contacto.html">Contacto</a></li>
-                        </ul>
+                        <div class="dropdown">
+                            <button class="btn btn-outline-light dropdown-toggle w-100" type="button" id="menuLinksDropdown" data-bs-toggle="dropdown" aria-expanded="false">Navegación</button>
+                            <ul class="dropdown-menu text-bg-dark" aria-labelledby="menuLinksDropdown">
+                                <li><a class="dropdown-item text-white" href="../index.html">Inicio</a></li>
+                                <li><a class="dropdown-item text-white" href="productos.html">Productos</a></li>
+                                <li><a class="dropdown-item text-white" href="rebajas.html">Rebajas</a></li>
+                                <li><a class="dropdown-item text-white" href="verano.html">Verano</a></li>
+                                <li><a class="dropdown-item text-white" href="novedades.html">Novedades</a></li>
+                                <li><a class="dropdown-item text-white" href="contacto.html">Contacto</a></li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="search-box">
-                        <form class="search-box" action="/buscar" method="get">
-                            <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
-                            <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita" style="color: #ffffff;"></i></button>
-                        </form>
+    
+                    <div class="filter-body-sm">
+                        <h2>Filtros</h2>
+                        <div class="filter-dropdown-talle">
+                            <select class="form-select" id="size" aria-label="Selecciona tu talle">
+                                <option selected>Selecciona un talle</option>
+                                <option value="S">S</option>
+                                <option value="M">M</option>
+                                <option value="L">L</option>
+                                <option value="XL">XL</option>
+                            </select>
+                        </div>
+                        <div class="filter-dropdown-categoria">
+                            <select class="form-select" id="category" aria-label="Selecciona una categoría">
+                                <option selected>Selecciona una categoría</option>
+                                <option value="oversize">Remeras Oversize</option>
+                                <option value="remeras_comunes">Remeras Comunes</option>
+                                <option value="baby_tees">Baby Tees</option>
+                                <option value="bermudas">Bermudas</option>
+                                <option value="musculosas">Musculosas</option>
+                            </select>
+                        </div>
+                        <div class="filter-prize">
+                            <p class="filter-txt">Rango de precios</p>
+                            <div class="filter-prize-range">
+                                <input type="range" class="form-range" id="priceRange" min="0" max="1000" step="10" value="500">
+                            </div>
+                        </div>
+                        <div class="filter-stock">
+                            <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
+                            <label class="btn btn-outline-light" for="btncheck1">En Stock</label>
+                        </div>
+                        <div class="filter-reset">
+                            <i class="fa-duotone fa-solid fa-rotate-right fa-xl"></i>
+                        </div>
+                        <div class="filter-search">
+                            <button type="button" class="btn btn-primary">Buscar</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </nav>
-
-    <h1 class="titular-body-productos">Personaliza tu busqueda y encontra esa prenda que mas potencia tu estilo</h1>
     
-    <div class="filter-body">
-        <!-- Primer Dropdown -->
-        <div class="filter-dropdown-talle">
-            <select class="form-select" id="size" aria-label="Selecciona tu talle">
-              <option selected>Selecciona un talle</option>
-              <option value="S">S</option>
-              <option value="M">M</option>
-              <option value="L">L</option>
-              <option value="XL">XL</option>
-            </select>
-          </div>
-          <!-- Segundo Dropdown -->
-          <div class="filter-dropdown-categoria">
-            <select class="form-select" id="category" aria-label="Selecciona una categoría">
-              <option selected>Selecciona una categoría</option>
-              <option value="oversize">Remeras Oversize</option>
-              <option value="remeras_comunes">Remeras Comunes</option>
-              <option value="baby_tees">Baby Tees</option>
-              <option value="bermudas">Bermudas</option>
-              <option value="musculosas">Musculosas</option>
-            </select>
-          </div>
 
-        <div class="filter-prize">
-            <p class="filter-txt">Rango de precios</p>
-            <div class="filter-prize-range">
-                <input type="range" class="form-range" id="priceRange" min="0" max="1000" step="10" value="500">
-                <div class="d-flex justify-content-between"></div>
+    <!-- Titulo de la pantalla de productos -->
+    <h1 class="titular-body-productos d-none d-md-block">Personaliza tu busqueda y encontra esa prenda que mas potencia tu estilo</h1>
+    <h1 class="titular-body-productos d-block d-md-none h-auto">Personaliza tu busqueda</h1>
+
+    <!-- Barra de filtrado para pantallas md y lg -->
+        <div class="filter-body">
+
+            <!-- Primer Dropdown -->
+            <div class="filter-dropdown-talle">
+                <select class="form-select" id="size" aria-label="Selecciona tu talle">
+                  <option selected>Selecciona un talle</option>
+                  <option value="S">S</option>
+                  <option value="M">M</option>
+                  <option value="L">L</option>
+                  <option value="XL">XL</option>
+                </select>
+              </div>
+
+              <!-- Segundo Dropdown -->
+              <div class="filter-dropdown-categoria">
+                <select class="form-select" id="category" aria-label="Selecciona una categoría">
+                  <option selected>Selecciona una categoría</option>
+                  <option value="oversize">Remeras Oversize</option>
+                  <option value="remeras_comunes">Remeras Comunes</option>
+                  <option value="baby_tees">Baby Tees</option>
+                  <option value="bermudas">Bermudas</option>
+                  <option value="musculosas">Musculosas</option>
+                </select>
+              </div>
+
+            <!-- Filtro de precios -->
+            <div class="filter-prize">
+                <p class="filter-txt">Rango de precios</p>
+                <div class="filter-prize-range">
+                    <input type="range" class="form-range" id="priceRange" min="0" max="1000" step="10" value="500">
+                    <div class="d-flex justify-content-between"></div>
+                </div>
             </div>
-        </div>
 
             <!-- Boton de filtro de stock -->
           <div class="filter-stock">
             <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
             <label class="btn btn-outline-light" for="btncheck1">En Stock</label>
           </div>
+
           <!-- Boton de reseteo de los filtros -->
           <div class="filter-reset">
             <i class="fa-duotone fa-solid fa-rotate-right fa-xl"></i>
           </div>
+
           <!-- Boton de busqueda usando los filtros -->
           <div class="filter-search">
             <button type="button" class="btn btn-primary">Buscar</button>
           </div>
-
     </div>
 
     
@@ -221,8 +267,6 @@
     </footer>
     
     <div class="fl_bar"><p>Powered by B'nT</p></div>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
