--- a/templates/item.html
+++ b/templates/item.html
@@ -138,7 +138,7 @@
                     <img src="../assets/img/Camiseta_mujer.jpg" alt="img2">
                     <img src="../assets/img/Musculosa_hombre.jpg" alt="img3">
                 </div>
-                <div class="mainIMG"><img src="../assets/img/Camiseta_hombre.jpg" alt="foto1"></div>
+                <div class="mainIMG"><img src="../assets/img/Remerones Oversize/remeron_card.png" alt="foto1"></div>
             </div>
             <div class="L_Mitem_txt">
                 <h2><a href="">Detalles</a></h2>
