Correccion de estilos del filtro en small

--- a/css/style.css
+++ b/css/style.css
@@ -1044,6 +1044,8 @@ header .search-box .lupita{
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 8vh;
+    position: relative;
+    bottom: 6vh;
 }
 
 .filter-body-sm h2 {
