--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -34,9 +34,9 @@
                     <li><a><div class="logonav"><img src="../assets/img/logo.jpg" alt=""></div></a></li>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="rebajas.html">Rebajas</a></li>
+                    <!-- <li><a href="rebajas.html">Rebajas</a></li>
                     <li><a href="verano.html">Verano</a></li>
-                    <li><a href="novedades.html">Novedades</a></li>
+                    <li><a href="novedades.html">Novedades</a></li>-->
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
@@ -62,9 +62,9 @@
                         <ul>
                             <li><a href="../index.html">Inicio</a></li>
                             <li><a href="productos.html">Productos</a></li>
-                            <li><a href="rebajas.html">Rebajas</a></li>
+                            <!-- <li><a href="rebajas.html">Rebajas</a></li>
                             <li><a href="verano.html">Verano</a></li>
-                            <li><a href="novedades.html">Novedades</a></li>
+                            <li><a href="novedades.html">Novedades</a></li>-->
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
