--- a/templates/productos.html
+++ b/templates/productos.html
@@ -35,9 +35,9 @@
                     <li><a><div class="logonav"><img src="../assets/img/logo.jpg" alt=""></div></a></li>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="rebajas.html">Rebajas</a></li>
+                    <!--<li><a href="rebajas.html">Rebajas</a></li>
                     <li><a href="verano.html">Verano</a></li>
-                    <li><a href="novedades.html">Novedades</a></li>
+                    <li><a href="novedades.html">Novedades</a></li>-->
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
@@ -66,9 +66,9 @@
                             <ul class="dropdown-menu text-bg-dark" aria-labelledby="menuLinksDropdown">
                                 <li><a class="dropdown-item text-white" href="../index.html">Inicio</a></li>
                                 <li><a class="dropdown-item text-white" href="productos.html">Productos</a></li>
-                                <li><a class="dropdown-item text-white" href="rebajas.html">Rebajas</a></li>
+                                <!--<li><a class="dropdown-item text-white" href="rebajas.html">Rebajas</a></li>
                                 <li><a class="dropdown-item text-white" href="verano.html">Verano</a></li>
-                                <li><a class="dropdown-item text-white" href="novedades.html">Novedades</a></li>
+                                <li><a class="dropdown-item text-white" href="novedades.html">Novedades</a></li>  -->
                                 <li><a class="dropdown-item text-white" href="contacto.html">Contacto</a></li>
                             </ul>
                         </div>
