--- a/templates/productos.html
+++ b/templates/productos.html
@@ -137,6 +137,7 @@
             </div>
         </div>
     </nav>
+    <!-- Fin de los header escritorio y movil (diseño responsive) -->
 
 
     <!-- Titulo de la pantalla de productos -->
