--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Enlace al archivo de Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Enlace a Google Fonts para la fuente utilizada -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
+    <!-- Enlace a Font Awesome para los iconos -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <!-- Style -->
+    <!-- Enlace a archivo de estilos personalizados -->
     <link rel="stylesheet" href="../css/style.css">
-    <!-- Font -->
+    <!-- Preconexion a Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
-
 
     <title>Crossover.sf Shop</title>
 </head>
@@ -26,9 +26,11 @@
     <header>
         <div class="big_navbar">
             <div class="mid_head">
+                <!-- Nombre del sitio en el encabezado -->
                 <div class="nombre_head">
                     <p>Crossover.sf</p>
                 </div>
+                <!-- Formulario de búsqueda -->
                 <form class="search-box" action="/buscar" method="get">
                     <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
                     <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
@@ -38,14 +40,17 @@
             <div class="abajo">
                 <nav class="bot_head">
                     <ul>
+                        <!-- Logo -->
                         <li><a>
                                 <div class="logonav"><img src="../assets/img/logo.jpg" alt=""></div>
                             </a></li>
+                        <!-- Menú de navegación principal -->
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="productos.html">Productos</a></li>
+                        <!-- Secciones comentadas -->
                         <!-- <li><a href="rebajas.html">Rebajas</a></li>
-                    <li><a href="verano.html">Verano</a></li>
-                    <li><a href="novedades.html">Novedades</a></li>-->
+                        <li><a href="verano.html">Verano</a></li>
+                        <li><a href="novedades.html">Novedades</a></li>-->
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -54,11 +59,13 @@
         </div>
     </header>
 
+    <!-- Menú de navegación para dispositivos pequeños -->
     <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
         <div class="container-fluid">
             <div class="nombre_head">
                 <p>Crossover.sf</p>
             </div>
+            <!-- Botón para abrir el menú lateral en pantallas pequeñas -->
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                 aria-label="Toggle navigation">
@@ -67,22 +74,27 @@
             <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                 aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header">
+                    <!-- Título del menú lateral -->
                     <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">MENÚ</h5>
+                    <!-- Botón para cerrar el menú lateral -->
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
                 </div>
 
                 <div class="offcanvas-body">
                     <div class="links_small_navbar">
+                        <!-- Menú lateral en pantallas pequeñas -->
                         <ul>
                             <li><a href="../index.html">Inicio</a></li>
                             <li><a href="productos.html">Productos</a></li>
+                            <!-- Secciones comentadas -->
                             <!-- <li><a href="rebajas.html">Rebajas</a></li>
-                            <li><a href="verano.html">Verano</a></li>
-                            <li><a href="novedades.html">Novedades</a></li>-->
+                                <li><a href="verano.html">Verano</a></li>
+                                <li><a href="novedades.html">Novedades</a></li>-->
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
+                    <!-- Formulario de búsqueda en el menú lateral -->
                     <div class="search-box">
                         <form class="search-box" action="/buscar" method="get">
                             <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
@@ -95,10 +107,12 @@
         </div>
     </nav>
 
+    <!-- Contenido principal de la página de contacto -->
     <div class="body_contact">
         <div class="father_form">
             <h1>Formulario de contacto</h1>
 
+            <!-- Formulario de contacto -->
             <form action="" method="post">
                 <label for="nombre">Nombre y apellido</label>
                 <input type="text" placeholder="Ingresa tu nombre" name="nombre" id="nombre">
@@ -112,17 +126,16 @@
                 <input type="submit" value="Enviar">
             </form>
             <div class="footer_form">
+                <!-- Mensaje después de enviar el formulario -->
                 <p>Le responderemos a la brevedad, <br> gracias por contactarse con nosotros. <br> Crossover.sf
                 </p>
             </div>
         </div>
         <aside class="contact_aside">
-
-
         </aside>
     </div>
 
-
+    <!-- Pie de página -->
     <footer>
 
         <div class="topper-foot">
@@ -130,6 +143,7 @@
                 <h3>¿Necesitas Ayuda?</h3>
                 <button><a href="contacto.html">Contáctanos</a></button>
                 <div class="social-links">
+                    <!-- Enlaces a redes sociales -->
                     <a href="https://www.instagram.com/crossover.sf/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
                     <a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a>
                     <a href="https://wa.me/3425119158?text=Hola,%20Quiero%20ver%20el%20cat%C3%A1logo!!"><i
@@ -139,6 +153,7 @@
 
             <div class="sec_foot">
                 <h3>Información y Preguntas Frecuentes</h3>
+                <!-- Enlaces a preguntas frecuentes -->
                 <ul class="sublinks_1">
                     <li><a href="faq.html">Devoluciones</a></li>
                     <li><a href="faq.html">Métodos de Pago</a></li>
@@ -148,6 +163,7 @@
 
             <div class="thi_foot">
                 <h3>¿Dónde estamos?</h3>
+                <!-- Mapa de ubicación -->
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d90467.83854046576!2d-60.779867669838396!3d-31.610485039551904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x95b5a9adc40888e1%3A0xdcf7761e8d02804a!2sSanta%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!3m2!1d-31.6106578!2d-60.697294!4m0!5e1!3m2!1ses-419!2sar!4v1733861449142!5m2!1ses-419!2sar"
                     width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy"
@@ -156,17 +172,17 @@
         </div>
     </footer>
 
+    <!-- Barra inferior -->
     <div class="fl_bar">
         <p>Powered by B'nT</p>
     </div>
+
+    <!-- Scripts de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
 
