--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
 </head>
 
 <body class="body_background">
-
+    <!-- Navbar para el diseño de pantallas grandes -->
     <header>
         <div class="big_navbar">
             <div class="mid_head">
@@ -55,6 +55,7 @@
         </div>
     </header>
 
+    <!-- Navbar para el diseño de pantallas pequeñas -->
     <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
         <div class="container-fluid">
             <div class="nombre_head">
@@ -73,6 +74,7 @@
                         aria-label="Close"></button>
                 </div>
 
+                <!-- Cuerpo del menu responsive -->
                 <div class="offcanvas-body">
                     <div class="links_small_navbar">
                         <ul>
@@ -96,6 +98,7 @@
         </div>
     </nav>
 
+    <!-- Acordion de preguntas frecuentes e informacion -->
     <div class="body_contact">
         <div class="accordion-container">
             <div class="accordion" id="accordionExample">
@@ -165,7 +168,7 @@
     </div>
 
 
-
+    <!-- Diseño del pie de pagina -->
     <footer>
 
         <div class="topper-foot">
@@ -202,16 +205,9 @@
     <div class="fl_bar">
         <p>Powered by B'nT</p>
     </div>
+
+    <!-- importaciones de bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
