--- a/templates/item.html
+++ b/templates/item.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Estilo de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Fuentes de Google -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap"
         rel="stylesheet">
+    <!-- FontAwesome para iconos -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <!-- Style -->
+    <!-- Estilos personalizados -->
     <link rel="stylesheet" href="../css/style.css">
-    <!-- Font -->
+    <!-- Conexión a fuentes de Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
-
 
     <title>Crossover.sf Shop</title>
 </head>
 
 <body class="body_background">
-
+    <!-- Navbar para el diseño de pantallas grandes -->
     <header>
         <div class="big_navbar">
             <div class="mid_head">
                 <div class="nombre_head">
                     <p>Crossover.sf</p>
                 </div>
+                <!-- Formulario de búsqueda -->
                 <form class="search-box" action="/buscar" method="get">
                     <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
                     <button type="post"><i class="fa-solid fa-magnifying-glass fa-xs lupita"
@@ -36,6 +37,7 @@
                 </form>
             </div>
             <div class="abajo">
+                <!-- Menú de navegación -->
                 <nav class="bot_head">
                     <ul>
                         <li><a>
@@ -44,8 +46,8 @@
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="productos.html">Productos</a></li>
                         <!-- <li><a href="rebajas.html">Rebajas</a></li>
-                    <li><a href="verano.html">Verano</a></li>
-                    <li><a href="novedades.html">Novedades</a></li> -->
+                        <li><a href="verano.html">Verano</a></li>
+                        <li><a href="novedades.html">Novedades</a></li> -->
                         <li><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
@@ -54,11 +56,13 @@
         </div>
     </header>
 
+    <!-- Navbar para el diseño de pantallas small -->
     <nav class="small_navbar navbar navbar-dark bg-dark d-block d-md-none">
         <div class="container-fluid">
             <div class="nombre_head">
                 <p>Crossover.sf</p>
             </div>
+            <!-- Botón de menú para pantallas pequeñas -->
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                 aria-label="Toggle navigation">
@@ -72,6 +76,7 @@
                         aria-label="Close"></button>
                 </div>
 
+                <!-- Cuerpo del menu responsive -->
                 <div class="offcanvas-body">
                     <div class="links_small_navbar">
                         <ul>
@@ -83,6 +88,7 @@
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
+                    <!-- Formulario de búsqueda en navbar small -->
                     <div class="search-box">
                         <form class="search-box" action="/buscar" method="get">
                             <input type="Shorts, Camisetas basicas..." name="buscar" placeholder="Escribe aquí..." />
@@ -95,8 +101,10 @@
         </div>
     </nav>
 
+    <!-- Indicador de ruta en la página del item -->
     <div class="ruteIndicator">Hombre > Camiseta</div>
 
+    <!-- Sección de descripción del producto, precio y calls to action -->
     <div class="Mitem">
         <div class="R_Mitem">
             <h1>Remera Freedom</h1>
@@ -120,6 +128,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis quisquam repellendus hic libero</p>
             </div>
             <hr>
+            <!-- Selección del talle -->
             <div class="R_Mitem_talle">
                 <p><b>SELECCIONA UN TALLE</b></p>
                 <div class="btn-group" role="group" aria-label="Selector de talles">
@@ -146,7 +155,7 @@
 
         </div>
 
-
+        <!-- Sección de imágenes del producto -->
         <div class="L_Mitem">
             <div class="L_Mitem_imgs">
                 <div class="L_Mitem_imgs_extras">
@@ -169,7 +178,7 @@
 
     </div>
 
-
+    <!-- Footer con información y redes sociales -->
     <footer>
 
         <div class="topper-foot">
@@ -201,20 +210,21 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
-    </footer>
 
-    <div class="fl_bar">
-        <p>Powered by B'nT</p>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
+        <!-- Footer -->
+        <div class="sub-foot">
+            <p>Copyright 2025 @Crossover.sf Todos los derechos reservados</p>
+        </div>
+
+    </footer>
+    <!-- Scripts de Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz4fnFO9gybpaB+OnL1RvmP+JcExChF93pXJp6t/5g5a7h0Jdfm15+5t9P" crossorigin="anonymous">
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+        integrity="sha384-vpYYhpN09x5ld1gZz4P0FvmhZh44wsbbr+6jLrD77+8z7X3lXT82zZl5t+DJkD1Y" crossorigin="anonymous">
+        </script>
+
 </body>
 
 </html>
