Correccion de todos los alt de las imagenes utilizadas

--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -42,7 +42,7 @@
                     <ul>
                         <!-- Logo -->
                         <li><a>
-                                <div class="logonav"><img src="../assets/img/logo.jpg" alt=""></div>
+                                <div class="logonav"><img src="../assets/img/logo.jpg" alt="logonav"></div>
                             </a></li>
                         <!-- Menú de navegación principal -->
                         <li><a href="../index.html">Inicio</a></li>
