--- a/templates/faq.html
+++ b/templates/faq.html
@@ -40,7 +40,7 @@
                 <nav class="bot_head">
                     <ul>
                         <li><a>
-                                <div class="logonav"><img src="../assets/img/logo.jpg" alt=""></div>
+                                <div class="logonav"><img src="../assets/img/logo.jpg" alt="logonav"></div>
                             </a></li>
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="productos.html">Productos</a></li>
