--- a/templates/item.html
+++ b/templates/item.html
@@ -41,7 +41,7 @@
                 <nav class="bot_head">
                     <ul>
                         <li><a>
-                                <div class="logonav"><img src="../assets/img/logo.jpg" alt=""></div>
+                                <div class="logonav"><img src="../assets/img/logo.jpg" alt="logonav"></div>
                             </a></li>
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="productos.html">Productos</a></li>
@@ -159,11 +159,11 @@
         <div class="L_Mitem">
             <div class="L_Mitem_imgs">
                 <div class="L_Mitem_imgs_extras">
-                    <img src="../assets/img/Camisa_hombre.jpg" alt="img1">
-                    <img src="../assets/img/Camiseta_mujer.jpg" alt="img2">
-                    <img src="../assets/img/Musculosa_hombre.jpg" alt="img3">
+                    <img src="../assets/img/Camisa_hombre.jpg" alt="Camisahombre">
+                    <img src="../assets/img/Camiseta_mujer.jpg" alt="Camisetamujer">
+                    <img src="../assets/img/Musculosa_hombre.jpg" alt="Musculosa_hombre">
                 </div>
-                <div class="mainIMG"><img src="../assets/img/Remerones Oversize/remeron_card.png" alt="foto1"></div>
+                <div class="mainIMG"><img src="../assets/img/Remerones Oversize/remeron_card.png" alt="Remeron oversize"></div>
             </div>
             <div class="L_Mitem_txt">
                 <h2><a href="">Detalles</a></h2>
