--- a/templates/productos.html
+++ b/templates/productos.html
@@ -40,7 +40,7 @@
                 <nav class="bot_head">
                     <ul>
                         <li><a>
-                                <div class="logonav"><img src="../assets/img/logo.jpg" alt=""></div>
+                                <div class="logonav"><img src="../assets/img/logo.jpg" alt="logonav"></div>
                             </a></li>
                         <li><a href="../index.html">Inicio</a></li>
                         <li><a href="productos.html">Productos</a></li>
@@ -203,7 +203,7 @@
             <!-- Card 1 -->
             <div class="card col-12 col-md-6 col-lg-4 col-xl-3" style="max-width: 18rem; min-width: 14rem;">
                 <img src="../assets/img/Camisas de fibrana/Talle M.jpg" class="card-img-top product-img"
-                    alt="Producto 1">
+                    alt="Camisa-de-fibrana">
                 <div class="card-body d-flex flex-column">
                     <p class="card-text">Camisa de fibrana con diseño flowers blue</p>
                     <hr>
@@ -215,7 +215,7 @@
             <!-- Card 2 -->
             <div class="card col-12 col-md-6 col-lg-4 col-xl-3" style="max-width: 18rem; min-width: 14rem;">
                 <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE FREEDOM LILA.png"
-                    class="card-img-top product-img" alt="Producto 2">
+                    class="card-img-top product-img" alt="Remera-freedom">
                 <div class="card-body d-flex flex-column">
                     <p class="card-text">Remerón oversize freedom lila con estampa</p>
                     <hr>
@@ -227,7 +227,7 @@
             <!-- Card 3 -->
             <div class="card col-12 col-md-6 col-lg-4 col-xl-3" style="max-width: 18rem; min-width: 14rem;">
                 <img src="../assets/img/Musculosa Oversize/MUSCULOSA COSMIC CRUDO.png" class="card-img-top product-img"
-                    alt="Producto 3">
+                    alt="Musculosa-cosmic">
                 <div class="card-body d-flex flex-column">
                     <p class="card-text">Musculosa cosmic oversize celeste con estampa</p>
                     <hr>
@@ -239,7 +239,7 @@
             <!-- Card 4 -->
             <div class="card col-12 col-md-6 col-lg-4 col-xl-3" style="max-width: 18rem; min-width: 14rem;">
                 <img src="../assets/img/Camisas de fibrana/Talle XL.jpg" class="card-img-top product-img"
-                    alt="Producto 4">
+                    alt="Camisa-de-fibrana">
                 <div class="card-body d-flex flex-column">
                     <p class="card-text">Camisa de fibrana con diseño de hojas</p>
                     <hr>
@@ -250,7 +250,7 @@
             </div>
             <!-- Card 5 -->
             <div class="card col-12 col-md-6 col-lg-4 col-xl-3" style="max-width: 18rem; min-width: 14rem;">
-                <img src="../assets/img/Bermudas/Bermuda de jean.png" class="card-img-top product-img" alt="Producto 5">
+                <img src="../assets/img/Bermudas/Bermuda de jean.png" class="card-img-top product-img" alt="Bermuda-de-jean">
                 <div class="card-body d-flex flex-column">
                     <p class="card-text">Bermuda corta de Jean, estilo baggie</p>
                     <hr>
