Correccion de la estructura de la pagina del item

--- a/templates/item.html
+++ b/templates/item.html
@@ -212,8 +212,8 @@
         </div>
 
         <!-- Footer -->
-        <div class="sub-foot">
-            <p>Copyright 2025 @Crossover.sf Todos los derechos reservados</p>
+        <div class="fl_bar">
+            <p>Powered by B'nT</p>
         </div>
 
     </footer>
