Cambio de resolucion de las imagenes del item y mejora del estilo general

--- a/templates/item.html
+++ b/templates/item.html
@@ -163,9 +163,9 @@
         <div class="L_Mitem">
             <div class="L_Mitem_imgs">
                 <div class="L_Mitem_imgs_extras">
-                    <img src="../assets/img/Camisa_hombre.jpg" alt="Camisahombre">
-                    <img src="../assets/img/Camiseta_mujer.jpg" alt="Camisetamujer">
-                    <img src="../assets/img/Musculosa_hombre.jpg" alt="Musculosa_hombre">
+                    <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE MOON NEGRA.png" alt="Remera_oversize_negra">
+                    <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE SMILE BLANCA.png" alt="Remera_oversize_blanca">
+                    <img src="../assets/img/Remerones Oversize/REMERA OVERSIZE NEW GALAXY VERDE.png" alt="Remera_oversize_verde">
                 </div>
                 <div class="mainIMG"><img src="../assets/img/Remerones Oversize/remeron_card.png" alt="Remeron oversize"></div>
             </div>
