--- a/css/style.css
+++ b/css/style.css
@@ -601,17 +601,17 @@ header .search-box .lupita {
     width: 75%;
     display: flex;
     padding-top: 2vh;
-    align-items: start;
     justify-content: center;
     border-style: none;
     border-radius: 1%;
     padding-bottom: 0;
+    margin: auto;
 }
 
 .Mitem .L_Mitem .L_Mitem_imgs .mainIMG img {
     width: 75%;
     height: auto;
-    aspect-ratio: 9/16;
+    aspect-ratio: auto;
     border-style: solid;
     border-radius: 2%;
     border-width: 0.1px;
@@ -643,7 +643,7 @@ header .search-box .lupita {
 .Mitem .L_Mitem .L_Mitem_imgs .L_Mitem_imgs_extras img {
     width: 90%;
     height: auto;
-    aspect-ratio: 9/16;
+    aspect-ratio: auto;
     border-style: solid;
     border-radius: 2%;
     border-width: 0.1px;
@@ -660,7 +660,7 @@ header .search-box .lupita {
     background-color: inherit;
     display: flex;
     padding-left: 20px;
-    margin-top: 38px;
+    margin-top: 10px;
     gap: 10px;
 }
 
@@ -730,6 +730,7 @@ header .search-box .lupita {
 .Mitem .R_Mitem .R_Mitem_bot {
     position: relative;
     bottom: -20px;
+    margin-bottom: 4vh;
 }
 
 
