--- a/css/style.css
+++ b/css/style.css
@@ -861,6 +861,7 @@ header .search-box .lupita {
 .filter-body * {
     margin: 0;
     justify-items: center;
+
 }
 
 .filter-firstbox{
@@ -870,7 +871,9 @@ header .search-box .lupita {
 }
 
 .filter-firstbox .form-select {
-    width: 100px;
+    width: 100%;
+    height: 7vh;
+    font-size: 2.4vh;
 }
 
 .filter-firstbox .filter-prize *{
@@ -1127,9 +1130,6 @@ header .search-box .lupita {
         padding: 15px;
         border-radius: 5px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        margin-bottom: 8vh;
-        position: relative;
-        bottom: 6vh;
     }
 
     .filter-body-sm h2 {
