Correccion de variables de colores en la distribucion scss

--- a/scss/components/_body_sobrefoot.scss
+++ b/scss/components/_body_sobrefoot.scss
@@ -1,7 +1,7 @@
 // _body_sobrefoot.scss
 
 .body_sobrefoot {
-    background-color: #cccaca;
+    background-color: $color_14;
     height: 200px;
     display: flex;
     flex-direction: row;
@@ -15,9 +15,9 @@
     }
     .subscription {
       order: 2;
-      background-color: #f4f4f4;
+      background-color: $color_8;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 15px $col_shadow;
       display: flex;
       flex-grow: 1;
       max-width: 35%;
@@ -36,39 +36,39 @@
       padding: 3% 5%;
     }
     input[type="submit"] {
-      background-color: #000000;
+      background-color: $color_1;
       padding: 0px 21px;
       border: none;
       border-radius: 8px;
       cursor: pointer;
       font-size: 18px;
-      color: $color_9;
+      color: $color_4;
       height: 45px;
       transition: background-color 0.3s, transform 0.2s;
       &:hover {
-        background-color: #818181;
-        transform: scale(1.05);
-        color: $color_10;
+        background-color: $color_11;
+        transform: scale(1.02);
+        color: $color_1;
       }
     }
     input[type="email"] {
       height: 45px;
       padding: 12px;
       margin-bottom: 15px;
-      border: 1px solid #ccc;
+      border: 1px solid $color_14;
       border-radius: 8px;
       font-size: 16px;
       box-sizing: border-box;
-      background-color: rgba(255, 255, 255, 0.8);
+      background-color: $color_2;
       transition: border-color 0.3s, box-shadow 0.3s;
       &:hover {
-        border-color: #000000;
+        border-color: $color_1;
         outline: none;
-        box-shadow: 0 0 5px rgba(142, 68, 173, 0.5);
+        box-shadow: 0 0 5px $col_shadow;
       }
       &:focus {
-        border-color: #6C5B7B;
-        box-shadow: 0 0 5px rgba(142, 68, 173, 0.7);
+        border-color: $button_second_hv;
+        box-shadow: 0 0 5px $col_shadow;
       }
     }
   }
