--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ a {
 }
 
 .bot_head {
-  border-bottom: 2px solid #000;
+  border-bottom: 2px solid rgb(0, 0, 0);
 }
 .bot_head .logonav img {
   height: 20px;
@@ -44,8 +44,8 @@ a {
   transition: all 0.3s ease;
 }
 .bot_head li:hover a {
-  color: #000000;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  color: rgb(0, 0, 0);
+  text-shadow: 2px 2px 5px rgba(7, 7, 7, 0.466);
 }
 .bot_head a {
   color: rgb(0, 0, 0);
@@ -54,7 +54,7 @@ a {
 .fl_bar {
   position: relative;
   margin-top: 0px;
-  background-color: #000000;
+  background-color: rgb(0, 0, 0);
   color: #f7f7f7;
   text-align: center;
   height: 18px;
@@ -138,7 +138,7 @@ header .search-box .lupita {
   color: white;
   font-size: 24px;
   font-weight: bold;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.753);
+  text-shadow: 2px 2px 5px rgba(7, 7, 7, 0.466);
   z-index: 1;
 }
 .holder .text-overlay2 {
@@ -153,7 +153,7 @@ header .search-box .lupita {
   z-index: 2;
 }
 .holder button {
-  background-color: #000000;
+  background-color: rgb(0, 0, 0);
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
@@ -214,7 +214,7 @@ footer a {
   padding: 0;
 }
 .topper-foot .fir_foot button {
-  background-color: #000000;
+  background-color: rgb(0, 0, 0);
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
@@ -302,7 +302,7 @@ footer a {
 }
 .search-box button {
   padding: 2px 15px;
-  background-color: #000000;
+  background-color: rgb(0, 0, 0);
   border: solid;
   border-color: #303030;
   border-radius: 20px;
@@ -318,7 +318,7 @@ footer a {
 }
 
 .body_contact {
-  font-family: Arial, sans-serif;
+  font-family: "Source Sans 3", sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
@@ -336,7 +336,7 @@ footer a {
   background-position: bottom;
   padding: 30px;
   border-radius: 10px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 15px rgba(7, 7, 7, 0.466);
   width: 100%;
   max-width: 450px;
 }
@@ -357,73 +357,75 @@ footer a {
   width: 100%;
   padding: 12px;
   margin-bottom: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid #aaaaaa;
   border-radius: 8px;
   font-size: 1em;
   box-sizing: border-box;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #dfdfdf;
 }
 .father_form input[type=text]:focus {
-  border-color: #3a3a3a;
+  border-color: #585858;
   outline: none;
-  box-shadow: 0 0 5px rgba(142, 68, 173, 0.5);
+  box-shadow: 0 0 5px rgba(7, 7, 7, 0.466);
 }
 .father_form input[type=email] {
   width: 100%;
   padding: 12px;
   margin-bottom: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid #aaaaaa;
   border-radius: 8px;
   font-size: 1em;
   box-sizing: border-box;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #dfdfdf;
 }
 .father_form input[type=email]:focus {
-  border-color: #3a3a3a;
+  border-color: #585858;
   outline: none;
-  box-shadow: 0 0 5px rgba(142, 68, 173, 0.5);
+  box-shadow: 0 0 5px rgba(7, 7, 7, 0.466);
 }
 .father_form textarea {
   width: 100%;
   padding: 12px;
   margin-bottom: 20px;
-  border: 1px solid #ccc;
+  border: 1px solid #aaaaaa;
   border-radius: 8px;
   font-size: 1em;
   box-sizing: border-box;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #dfdfdf;
 }
 .father_form textarea:focus {
-  border-color: #3a3a3a;
+  border-color: #585858;
   outline: none;
-  box-shadow: 0 0 5px rgba(142, 68, 173, 0.5);
+  box-shadow: 0 0 5px rgba(7, 7, 7, 0.466);
 }
 .father_form input[type=submit] {
   width: 100%;
   padding: 12px;
-  background: linear-gradient(345deg, #3a3053, #a8a8a8);
-  color: #dfdfdf;
   font-size: 1em;
   font-weight: bold;
   border: none;
   border-radius: 8px;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.2s;
+  background: linear-gradient(345deg, #0b2b55, #a8a8a8);
+  color: #dfdfdf;
 }
 .father_form input[type=submit]:hover {
-  background: linear-gradient(345deg, #5f4e88, #a8a8a8);
   transform: scale(1.02);
+}
+.father_form input[type=submit]:hover {
+  background: linear-gradient(345deg, #3d4e88, #a8a8a8);
 }
 
 .footer_form {
   text-align: center;
   font-size: 0.9em;
   margin-top: 20px;
-  color: #ffffff;
+  color: #f7f7f7;
 }
 
 .body_sobrefoot {
-  background-color: #cccaca;
+  background-color: #aaaaaa;
   height: 200px;
   display: flex;
   flex-direction: row;
@@ -438,9 +440,9 @@ footer a {
 }
 .body_sobrefoot .subscription {
   order: 2;
-  background-color: #f4f4f4;
+  background-color: #dfdfdf;
   border-radius: 10px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 15px rgba(7, 7, 7, 0.466);
   display: flex;
   flex-grow: 1;
   max-width: 35%;
@@ -457,40 +459,40 @@ footer a {
   padding: 3% 5%;
 }
 .subscription input[type=submit] {
-  background-color: #000000;
+  background-color: rgb(0, 0, 0);
   padding: 0px 21px;
   border: none;
   border-radius: 8px;
   cursor: pointer;
   font-size: 18px;
-  color: #ffffff;
+  color: white;
   height: 45px;
   transition: background-color 0.3s, transform 0.2s;
 }
 .subscription input[type=submit]:hover {
-  background-color: #818181;
-  transform: scale(1.05);
-  color: #303030;
+  background-color: #585858;
+  transform: scale(1.02);
+  color: rgb(0, 0, 0);
 }
 .subscription input[type=email] {
   height: 45px;
   padding: 12px;
   margin-bottom: 15px;
-  border: 1px solid #ccc;
+  border: 1px solid #aaaaaa;
   border-radius: 8px;
   font-size: 16px;
   box-sizing: border-box;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: #f7f7f7;
   transition: border-color 0.3s, box-shadow 0.3s;
 }
 .subscription input[type=email]:hover {
-  border-color: #000000;
+  border-color: rgb(0, 0, 0);
   outline: none;
-  box-shadow: 0 0 5px rgba(142, 68, 173, 0.5);
+  box-shadow: 0 0 5px rgba(7, 7, 7, 0.466);
 }
 .subscription input[type=email]:focus {
-  border-color: #6C5B7B;
-  box-shadow: 0 0 5px rgba(142, 68, 173, 0.7);
+  border-color: #3d4e88;
+  box-shadow: 0 0 5px rgba(7, 7, 7, 0.466);
 }
 
 .item img {
@@ -508,15 +510,15 @@ footer a {
   background-color: white;
 }
 .Mitem .L_Mitem {
-  background-color: #f5f5f5;
+  background-color: white;
   flex: 1.5;
   order: 1;
   padding: 10px;
   border-style: solid;
   border-width: 0.1px;
-  border-color: rgba(0, 0, 0, 0.2745098039);
+  border-color: #aaaaaa;
   border-radius: 1%;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.247);
+  box-shadow: 0 2px 4px rgba(7, 7, 7, 0.466);
 }
 .Mitem .L_Mitem .L_Mitem_imgs {
   gap: 10px;
@@ -541,7 +543,7 @@ footer a {
   border-style: solid;
   border-radius: 2%;
   border-width: 0.1px;
-  border-color: rgba(0, 0, 0, 0.2745098039);
+  border-color: #aaaaaa;
   overflow: hidden;
   transition: transform 0.5s ease;
 }
@@ -565,12 +567,12 @@ footer a {
   border-style: solid;
   border-radius: 2%;
   border-width: 0.1px;
-  border-color: rgba(0, 0, 0, 0.2745098039);
+  border-color: #aaaaaa;
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 .Mitem .L_Mitem .L_Mitem_imgs .L_Mitem_imgs_extras img:hover {
-  border-color: rgba(180, 180, 176, 0.822);
-  box-shadow: 0 5px 5px rgb(75, 49, 49);
+  border-color: #aaaaaa;
+  box-shadow: 0 5px 5px rgba(7, 7, 7, 0.466);
 }
 .Mitem .L_Mitem .L_Mitem_txt {
   background-color: inherit;
@@ -585,7 +587,7 @@ footer a {
 }
 .Mitem .L_Mitem .L_Mitem_txt a {
   background-color: inherit;
-  color: #000;
+  color: rgb(0, 0, 0);
   text-decoration: none;
 }
 .Mitem .L_Mitem .L_Mitem_com {
@@ -597,20 +599,20 @@ footer a {
   width: 93%;
   align-items: center;
   border: none;
-  border-top: 1.3px solid #000;
+  border-top: 1.3px solid rgb(0, 0, 0);
   margin: 0 auto;
   padding: 0;
 }
 .Mitem .R_Mitem {
-  background-color: #e0e0e0;
+  background-color: #e4e1e1;
   height: auto;
   order: 2;
   padding: 1% 2%;
   border-style: solid;
   border-width: 0.1px;
-  border-color: rgba(0, 0, 0, 0.2745098039);
+  border-color: #aaaaaa;
   border-radius: 1%;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.247);
+  box-shadow: 0 2px 4px rgba(7, 7, 7, 0.466);
   position: sticky;
   top: 10px;
   width: 30%;
@@ -651,7 +653,7 @@ footer a {
   font-weight: bold;
   height: auto;
   border-width: 1px;
-  border-color: rgba(48, 48, 48, 0.4745098039);
+  border-color: #303030;
 }
 
 .card-title {
@@ -662,16 +664,16 @@ footer a {
   border-radius: 8px;
   transition: all 0.3s ease;
   padding: 10px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 6px rgba(7, 7, 7, 0.466);
   height: auto;
   margin-bottom: 20px;
-  border: 1px solid #ddd;
+  border: 1px solid #e4e1e1;
   border-radius: 8px;
 }
 .card:hover {
   transform: scale(0.98);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  border-color: #303030;
+  box-shadow: 0 4px 12px rgba(7, 7, 7, 0.466);
+  border-color: #aaaaaa;
 }
 
 .card-img-container {
@@ -702,7 +704,7 @@ footer a {
   font-weight: bold;
   text-transform: uppercase;
   color: rgb(0, 0, 0);
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.562);
+  text-shadow: 2px 2px 4px rgba(7, 7, 7, 0.466);
 }
 
 .titular-body-index {
@@ -719,7 +721,7 @@ footer a {
   font-weight: bold;
   text-transform: uppercase;
   color: rgb(0, 0, 0);
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.562);
+  text-shadow: 2px 2px 4px rgba(7, 7, 7, 0.466);
 }
 
 .fa-angles-down {
@@ -730,33 +732,34 @@ footer a {
   width: 90%;
   margin: 20px auto;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.459);
+  box-shadow: 0 4px 8px rgba(7, 7, 7, 0.466);
 }
 
 .accordion-button {
   text-transform: uppercase;
   font-weight: bold;
-  background-color: #1f1f1f;
+  background-color: #303030;
   color: #f8f9fa;
   border: none;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.5s ease;
 }
 .accordion-button:hover {
-  background-color: #8a8a8a;
+  background-color: #585858;
 }
 .accordion-button:not(.collapsed) {
-  background-color: rgb(223, 223, 223);
+  color: #f7f7f7;
+  background-color: #585858;
 }
 
 .accordion-body {
-  background-color: #34394b;
-  color: #e4e1e1;
-  border-top: 1px solid #444;
+  background-color: #dfdfdf;
+  color: rgb(0, 0, 0);
+  border-top: 1px solid #424242;
 }
 
 .filter-body {
   width: 100%;
-  height: 5vh;
+  height: 7vh;
   background-color: grey;
   border-bottom: white;
   border-width: 2px;
@@ -812,7 +815,7 @@ footer a {
 
 .filter-txt {
   padding-top: 2vh;
-  color: #ffffff;
+  color: #424242;
 }
 
 .filter-dropdown-categoria .form-select {
@@ -820,7 +823,7 @@ footer a {
   color: white;
   border: 1px solid #444;
   border-radius: 5px;
-  height: 3vh;
+  height: 4vh;
 }
 
 .filter-dropdown-talle .form-select {
@@ -828,7 +831,7 @@ footer a {
   color: white;
   border: 1px solid #444;
   border-radius: 5px;
-  height: 3vh;
+  height: 4vh;
 }
 
 .titular-body-productos {
@@ -956,7 +959,7 @@ footer a {
     display: none;
   }
   .bg-dark {
-    background-color: #000 !important;
+    background-color: rgb(0, 0, 0) !important;
   }
   .d-block {
     height: 90px;
@@ -991,7 +994,7 @@ footer a {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 6px rgba(7, 7, 7, 0.466);
     transition: background-color 0.3s ease, transform 0.4s ease;
   }
   /* Dropdown menu del navbar responsive */
