--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,17 +3,31 @@
 $font-family_1: "Source Sans 3", sans-serif;
 $font-family_2: Arial, sans-serif;
 
-$color_1: rgb(0, 0, 0);
+$bg_color: #dadada;
+
+$color_1: rgb(0, 0, 0);//$color_14: black; $color_11: #000; $color_1
 $color_2: #f7f7f7;
-$color_3: #000000;
-$color_4: white;
+$color_3: rgb(70, 70, 70);
+$color_4: white; //$color_9: #ffffff;
 $color_5: rgba(255, 255, 255, 0.425);
 $color_6: #333;
 $color_7: #2e2e2e;
 $color_8: #dfdfdf;
-$color_9: #ffffff;
+$color_9: #424242;
 $color_10: #303030;
-$color_11: #000;
+$color_11: #585858;
 $color_12: #f8f9fa;
 $color_13: #e4e1e1;
-$color_14: black; // si aparecía en @media (max-width: 768px)
+$color_14: #aaaaaa;
+
+$col_shadow: rgba(7, 7, 7, 0.466);
+
+// Colores del form de contacto
+
+$bg_first: #d1cfcf;
+$bg_second: #152841;
+
+$button_first: #a8a8a8;
+$button_second: #0b2b55;
+$button_first_hv: #a8a8a8;
+$button_second_hv: #3d4e88;
