--- a/scss/components/_accordion.scss
+++ b/scss/components/_accordion.scss
@@ -4,26 +4,27 @@
   width: 90%;
   margin: 20px auto;
   border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.459);
+  box-shadow: 0 4px 8px $col_shadow;
 }
 
 .accordion-button {
   text-transform: uppercase;
   font-weight: bold;
-  background-color: #1f1f1f;
+  background-color: $color_10;
   color: $color_12;
   border: none;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.5s ease;
   &:hover {
-    background-color: #8a8a8a;
+    background-color: $color_11;
   }
   &:not(.collapsed) {
-    background-color: rgb(223, 223, 223);
+    color: $color_2;
+    background-color: $color_11;
   }
 }
 
 .accordion-body {
-  background-color: #34394b;
-  color: $color_13;
-  border-top: 1px solid #444;
+  background-color: $color_8;
+  color: $color_1;
+  border-top: 1px solid $color_9;
 }
