--- a/scss/components/_search-box.scss
+++ b/scss/components/_search-box.scss
@@ -9,15 +9,15 @@
     color: $color_4;
     width: 290px;
     padding: 10px;
-    border: 2px solid #585858;
+    border: 2px solid $color_11;
     border-radius: 20px;
     font-size: 13px;
     outline: none;
     transition: border-color 0.3s ease;
     height: 2px;
-    background-color: #424242;
+    background-color: $color_9;
     &:focus {
-      border-color: #aaaaaa;
+      border-color: $color_14;
       box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
     }
     &::placeholder {
@@ -26,15 +26,15 @@
   }
   button {
     padding: 2px 15px;
-    background-color: #000000;
+    background-color: $color_1;
     border: solid;
-    border-color: #303030;
+    border-color: $color_10;
     border-radius: 20px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     height: 26px;
     &:hover {
-      background-color: #424242;
+      background-color: $color_9;
     }
     &:active {
       transform: scale(0.95);
