--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -4,7 +4,7 @@ footer {
   a {
     color: $color_1;
   }
-  background-color: #f7f7f7;
+  background-color: $color_2;
   color: $color_1;
   z-index: 15;
 }
@@ -22,7 +22,7 @@ footer {
   }
   .fir_foot {
     button {
-      background-color: #000000;
+      background-color: $color_1;
       padding: 10px 20px;
       border: none;
       border-radius: 5px;
@@ -34,7 +34,7 @@ footer {
       }
       &:active {
         transform: scale(0.98);
-        background-color: #303030;
+        background-color: $color_10;
       }
     }
   }
